# espilepsy

./: Cargo.toml  flake.nix
.cargo/: config.toml
.helix/: languages.toml
examples/: blink.rs
src/: lib.rs  main.rs
