[package]
name = "espilepsy"
version = "0.2.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Blinking WS2812b LEDs with esp-hal and embassy"

[features]
embassy-time-systick = ["hal/embassy-time-systick-16mhz"]
embassy-time-timg0 = ["hal/embassy-time-timg0"]

[dependencies]
embassy-executor = "0.5"
embassy-futures = "0.1.1"
embassy-sync = "0.5.0"
embassy-time = { version = "0.3" }
hal = { package = "esp-hal", version = "0.17.0", features = ["esp32c3", "embassy", "async"] }

[dev-dependencies]
esp-backtrace = { version = "0.11.1", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.9.1", features = ["esp32c3"] }
embassy-executor = { version = "0.5", features = ["nightly"] }
static_cell = "2.1.0"
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
hal = { package = "esp-hal", version = "0.17.0", features = ["esp32c3", "embassy", "async", "embassy-executor-thread", "embassy-time-systick-16mhz"] }

[profile.dev]
opt-level = 2

